fixed scrollbar on impressum page

--- a/Frontend/src/style/Impressum.css
+++ b/Frontend/src/style/Impressum.css
@@ -2,25 +2,16 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start; /* Startet die Ausrichtung vom Anfang */
-    overflow-x: hidden;
     background-color: #38527D;
     background-size: cover;
-    min-height: 100vh; /* Mindesthöhe, um den gesamten Bildschirm abzudecken */
-    width: 100vw;
-}
-
-.App-header {
-
 }
 
 .body {
     position: relative;
     display: flex;
-    top: 10vh;
     width: 100%;
     text-align: center;
     justify-content: center;
-
 }
 
 .content {
